--- a/pom.xml
+++ b/pom.xml
@@ -13,15 +13,37 @@
     <spring.version>4.2.0.RELEASE</spring.version>
     <slf4j.version>1.7.5</slf4j.version>
     <log4j.version>1.2.16</log4j.version>
+    <tomcat-jdbc.version>7.0.32</tomcat-jdbc.version>
+	<mysql-connector-java.version>5.1.33</mysql-connector-java.version>
+	<commons-lang.version>2.6</commons-lang.version>
   </properties>
   <dependencies>
     <!-- springframe start -->
+        <dependency>
+          <groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>${commons-lang.version}</version>
+		</dependency>
+        <dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-jdbc</artifactId>
+			<version>${tomcat-jdbc.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql-connector-java.version}</version>
+		</dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
       <version>${spring.version}</version>
     </dependency>
-
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.2</version>
+		</dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
